# workflow-automations

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  build-debug.sh  docker-compose.yaml  generate_litellm_key.sh  large_repos.txt  litellm_config.yaml  prefect.toml  pve-admin-guide.txt  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  sample_repos.txt  sample_repos_list.txt  setup-litellm-db.sh  start_litellm_proxy.sh
.devcontainer/: post-create.sh
assets/: analyze_and_document_repos.md
docs/standards/owasp/: owasp_asvs.txt
report_samples/: DEMJSON3.md  TIKTOKEN.md
scripts/: generate_test_fixtures.py  github_repo_urls.py  llm_tools.py  pdf2txt.py
src/core/: __init__.py  app_init.py
src/core/config/: __init__.py
src/core/models/: __init__.py  base.py  flows.py
src/core/models/data/: __init__.py  db_result.py  task_result.py
src/core/models/repository/: __init__.py  repomix_result.py
src/core/services/: __init__.py  prefect_local_server.py  service_discover.py
src/core/services/database/: __init__.py  async_repository.py  async_storage.py  mongodb.py  operations.py
src/core/services/github/: __init__.py  repo_fetcher.py  repository_service.py
src/core/services/web_crawler/: app.py  crawler.py  proxy.py
src/core/utils/: __init__.py  runtime.py  tasks.py  time.py  tokenization.py
src/core/utils/ai/: __init__.py  logging.py
src/core/utils/format/: __init__.py  colors.py  markdown_builder.py
src/core/utils/logger/: __init__.py  custom_logger.py  logger_factory.py
src/core/utils/system/: __init__.py  datetime.py  memory.py
src/examples/: async_example.py
src/scripts/: __init__.py  secrets_manager.py
src/tools/repomix/: __init__.py  run_tool.py  xml_parser.py
src/workflows/: __init__.py
src/workflows/agents/: __info__.py  openrouter_models.py  prompts.py
src/workflows/agents/models/: __init__.py  agent_tasks.py  flow.py
src/workflows/agents/prompts/: __init__.py  prompts.py  security_prompts.py
src/workflows/flows/: __init__.py  analyze_and_document_repos.py  concurrent_agents.py  doc_gen.py  extraction_strategies.py  private_repo_analysis.py  repo_analysis.py
src/workflows/tasks/: __init__.py  db_ops.py  tool_repomix.py
src/workflows/tasks/ai_ops/: __init__.py  agent_config.py  tasks.py  tools.py  utils.py
src/workflows/tasks/db/: __init__.py  operations.py
src/workflows/tasks/github/: __init__.py  fetch.py
tests/: __init__.py  conftest.py
tests/core/utils/: test_mongodb_size_validation.py  test_runtime.py  test_tasks.py  test_time.py  test_tokenization.py  test_tokenization_fixtures.py
tests/fixtures/: fixtures_helper.py  pytest_fixture_example.py
tests/models/: README.md  __init__.py  test_agent_result_models.py  test_base_model.py  test_extract_base_models.py  test_workflow_models.py
tests/workflows/tasks/: README.md  test_ai_ops.py  test_github_fetch.py  test_tool_repomix.py
(+15 files in other folders)
