[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "workflows"
version = "0.1.0"
description = "A simple Prefect workflow test project"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
  "aiotinydb>=2.0.0",
  "chromadb>=1.0.8",
  "click>=8.1.8",
  "crawl4ai>=0.6.3",
  "demjson3>=3.0.6",
  "dotenv>=0.9.9",
  "gitpython>=3.1.44",
  "httpx>=0.28.1",
  "logfire>=3.15.1",
  "prefect==3.3.3",
  "prefect-aws",
  "psutil>=7.0.0",
  "pydantic-ai==0.0.55",
  "requests>=2.32.3",
  "tiktoken>=0.9.0",
  "uvicorn>=0.34.2",
]

[project.scripts]
secrets-manager = "scripts.secrets_manager:main"
doc-gen = "workflows.flows.analyze_and_document_repos:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
    "pyinstaller"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.black]
line-length = 100  # Longer line length to reduce forced wrapping
target-version = ['py39']
skip-string-normalization = true  # Preserves string quote style
preview = false  # Disable preview features that might be unstable
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
# Skip files with syntax errors
skip-magic-trailing-comma = true  # Less aggressive comma insertion
experimental-string-processing = false  # Disable experimental string

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest]
testpaths = ["tests"]
